# RoboND-MapMyWorld-Project

./: README.md
report/: bib.bib  main.tex
slam_bot/: CMakeLists.txt  package.xml
slam_bot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
slam_bot/launch/: amcl.launch  kitchen-world.launch  mapping.launch  personal-world.launch  robot-map-config.rviz  robot_description.launch  udacity_world.launch
slam_bot/launch/config/: robot-map-config.rviz
slam_bot/urdf/: slam_bot.gazebo  slam_bot.xacro  udacity_bot.gazebo
slam_bot/worlds/: personal.world  udacity.world
udacity_bot/config/: base_local_planner_params.yaml  costmap_common_params.yaml
udacity_bot/launch/: amcl.launch  robot-config.rviz  robot_description.launch  udacity_world.launch
udacity_bot/urdf/: udacity_bot.gazebo  udacity_bot.xacro
